2011-01-26 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydesk.el (top level): remove folding marks.
	(tinydesk-recover-file-whole-buffer):Move location.
	(tinydesk-save-state): Change `not-modified' to
	`set-buffer-modified-p'.
	(tinydesk-mark-buffer-loadable): Move location.
	(tinydesk-comment-re): Optimize. Add macro expansion.
	(tinydesk-mark-region): Rewrite. Much simpler now. Fix handling
	of files and directory names with spaces. Savannah Bug#32253.

2011-01-24 Mon  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-command-clone-in-mail):
	New.
	(tinydebian-bts-mail-ctrl-command-clone): Rewrite.
	(tinydebian-bts-mail-ctrl-clone-new-mail): Rename. Was
	`tinydebian-bts-mail-ctrl-command-clone'.

2011-01-14 Fri  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tiny-admin-util.el (tiny-setup-autoload-build-functions-all):
	Exclude loaddefs file.

2011-01-06  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (tinylisp-with-file-env-macro):
	remove unused let variable `original-backup-inhibited'.


2010-12-27 Mon  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-mail-mode): Remove
	`tinydebian-bug-browse-url-by-bug' and use generic
	`tinydebian-bug-browse-url-main'.
	(tinydebian--emacs-bts-email-address): Change emacsbugs.donarmstrong.com
	to debbugs.gnu.org.
	(tinydebian-bug-gnu-emacs-bts-re-search-email): Check control@ address.
	(tinydebian--emacs-bts-url-http-bugs): Chnage emacsbugs.donarmstrong.com
	to debbugs.gnu.org.

2010-12-26 Sun  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-nbr-any-in-string): Adjust
	submatch.
	(tinydebian-bug-nbr-any-in-string): Add another regecp.
	(tinydebian-bug-nbr-article-buffer): New. Look at Subject.

2010-12-22 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinytf.el: (top level): Update documentation to
	use `write-file-functions'.

	* tiny/tinyperl.el (tinyperl-install-hooks): Update to